cmake_minimum_required(VERSION 3.14)
project(Data_Structure_II)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Data_Structure_II class01_tree/ex01_arvore.cpp)
#add_executable(Data_Structure_II class01_tree/ex01_arvore_bkp_comment.cpp)
#add_executable(Data_Structure_II class01_tree/teste.cpp)

add_executable(Data_Structure_II class02_hash-table/ex01_hash-table_valor.cpp)
#add_executable(Data_Structure_II class02_hash-table/ex02_hash-table_name.cpp)
#add_executable(Data_Structure_II class02_hash-table/hash_test.cpp)